<resources>
    <string name="app_name">Brush Up!</string>
    <string name="button_play">PLAY</string>
    <string name="button_go">GO</string>
    <string name="lang">Select:</string>
    <string name="word">Word (English)</string>
    <string name="mean">Meaning </string>
    <string name="wtype">Word type:</string>
    <string name="vbo">Verb</string>
    <string name="avo">Adjective</string>
    <string name="svo">Substantive</string>
    <string name="other">Other</string>
    <string name="all">Any</string>
    <string name="options">Options</string>
    <string name="level">Words per level (%):</string>
    <string name="example">Example:</string>
    <string name="button_mainmenu">Go to Main Menu</string>
    <string name="button_goback">Go back</string>
    <string name="button_cont">Next Word</string>
    <string name="button_reset">Reset Database</string>
    <string name="button_dict">Dictionary</string>
    <string name="button_stats">Statistics</string>
    <string name="button_resetlevel">Reset Levels</string>
    <string name="button_resettable">Reset App</string>
    <string name="button_insert">Insert New Word</string>
    <string name="button_add">Insert New Word</string>
    <string name="button_del">Delete Word</string>
    <string name="button_delnote">Delete Note</string>
    <string name="button_exit">Exit</string>
    <string name="button_credits">About</string>
    <string name="button_notes">Notes</string>
    <string name="button_import">Load Data</string>
    <string name="button_seenotes">See Notes</string>
    <string name="button_addgrammar">Add New Note</string>
    <string name="button_insertnote">Insert Note</string>
    <string name="button_updateword">Update Word</string>
    <string name="button_edit">Edit Word</string>
    <string name="button_editnote">Edit Note</string>
    <string name="button_backup">Export DDBB</string>
    <string name="button_in">Import DDBB</string>
    <string name="button_updatenote">Update Notes</string>
    <string name="author">DEVELOPED BY</string>
    <string name="contact">CONTACT</string>
    <string name="grammar">Grammar</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="help">HELP</string>
    <string name="authormail">javierfdeztroncoso@gmail.com</string>
    <string name="authorname">Javier F. Troncoso</string>
    <string name="helpdesc">SQLite database of quiz questions. The user can create its own database, or load a default set of questions. It is a game to test your knowledge and put together all the vocabulary you need to brush up.</string>
    <string name="setlevel">This option sets all levels to zero:</string>
    <string name="loadword">Load Data</string>
    <string name="loadwords">This option loads words and notes given by default. Duplicates are ignored.</string>
    <string name="removewords">This option cleans and removes all records:</string>
    <string name="backup">Back Up DDBB to \"Download/brushup_{day}.db\"</string>
    <string name="in">Import data from \"Download/brushup.sql\". SQL statements to insert rows into \"WORDS (word, example, meaning, syntaxis,category)\" or/and \"NOTES (title, note)\". Duplicates will be ignored.</string>
</resources>
