<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditWord">

    <ScrollView android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/word"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/word" >
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/mean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/mean"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/editText1" />

            <EditText
                android:id="@+id/edit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/mean" >
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/example"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <EditText
                android:id="@+id/edit3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/example" >
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/wtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/wtype"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <RadioGroup
                android:id="@+id/radioGroup4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/wtype"
                android:checkedButton="@+id/radioButton21">

                <RadioButton
                    android:id="@+id/radioButton31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/vbo" />

                <RadioButton
                    android:id="@+id/radioButton32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/svo" />

                <RadioButton
                    android:id="@+id/radioButton33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/avo" />

                <RadioButton
                    android:id="@+id/radioButton34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/other" />
            </RadioGroup>

            <Button
                android:id="@+id/button_updateword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B0F7F7"
                android:text="@string/button_updateword"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup3"
                tools:layout_width="match_parent" />
            <Button
                android:id="@+id/button_gobacktodict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B0F7F7"
                android:text="@string/button_goback"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/button_updateword"
                tools:layout_width="match_parent" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>