<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.jft.brushup.ResetDatabase">

    <ScrollView android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/setlevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/setlevel"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_width="match_parent" />

    <Button
        android:id="@+id/button_resetlevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B0F7F7"
        android:layout_marginTop="6dp"
        android:text="@string/button_resetlevel"
        app:layout_constraintTop_toTopOf="@+id/setlevel"
        tools:layout_width="match_parent" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="212dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/button_resetlevel"
                tools:layout_width="match_parent" />


            <TextView
                android:id="@+id/removewords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/removewords"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="@+id/divider1"
                tools:layout_width="match_parent" />


            <Button
                android:id="@+id/button_resettable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="#B0F7F7"
                android:text="@string/button_resettable"
                app:layout_constraintTop_toBottomOf="@+id/button_resetlevel"
                tools:layout_width="match_parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="212dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/button_resettable"
                tools:layout_width="match_parent" />


            <TextView
                android:id="@+id/loadwords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/loadwords"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="@+id/divider2"
                tools:layout_width="match_parent" />

            <Button
                android:id="@+id/button_resetapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#B0F7F7"
                android:text="@string/loadword"
                app:layout_constraintTop_toBottomOf="@+id/button_resettable"
                tools:layout_width="match_parent" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="212dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/button_resetapp"
                tools:layout_width="match_parent" />


            <TextView
                android:id="@+id/backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/backup"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="@+id/divider3"
                tools:layout_width="match_parent" />

            <Button
                android:id="@+id/button_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B0F7F7"
                android:layout_marginTop="4dp"
                android:text="@string/button_backup"
                app:layout_constraintTop_toBottomOf="@+id/backup"
                tools:layout_width="match_parent" />


            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="212dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/button_backup"
                tools:layout_width="match_parent" />


            <TextView
                android:id="@+id/intext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/in"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="@+id/divider5"
                tools:layout_width="match_parent" />

            <Button
                android:id="@+id/button_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B0F7F7"
                android:layout_marginTop="4dp"
                android:text="@string/button_in"
                app:layout_constraintTop_toBottomOf="@+id/backup"
                tools:layout_width="match_parent" />



            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="212dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/button_in"
                tools:layout_width="match_parent" />

            <Button
                android:id="@+id/button_mainMenu_fromStat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B0F7F7"
                android:layout_marginTop="20dp"
                android:text="@string/button_mainmenu"
                app:layout_constraintTop_toBottomOf="@+id/divider4"
                tools:layout_width="match_parent" />

</LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
